[gd_scene load_steps=5 format=3 uid="uid://cet1eivu7dl3u"]

[ext_resource type="Script" path="res://Scripts/nivel_3.gd" id="1_01032"]
[ext_resource type="PackedScene" uid="uid://b448qcmy7bpr" path="res://Scenes/pausa_game_over.tscn" id="2_lmlgr"]
[ext_resource type="PackedScene" uid="uid://bnv1hyx82tw5t" path="res://Scenes/fondo.tscn" id="3_xqrj0"]
[ext_resource type="Texture2D" uid="uid://crl6c80r5tteu" path="res://Assets/Imagenes/Fondo/Nebula Red.png" id="4_me3y7"]

[node name="Nivel3" type="Node2D"]
script = ExtResource("1_01032")

[node name="Pausa-GameOver" parent="." instance=ExtResource("2_lmlgr")]

[node name="Fondo" parent="." instance=ExtResource("3_xqrj0")]

[node name="Sprite2D" parent="Fondo/ParallaxLayer" index="0"]
texture = ExtResource("4_me3y7")

[connection signal="jugar" from="Pausa-GameOver" to="." method="_on_pausa_game_over_jugar"]
[connection signal="rejugar" from="Pausa-GameOver" to="." method="_on_pausa_game_over_rejugar"]
[connection signal="salir" from="Pausa-GameOver" to="." method="_on_pausa_game_over_salir"]

[editable path="Fondo"]
